syntax = "proto3";

option go_package = "github.com/my-org/logging-system/pkg/logs";

package logs;

service LogService {
  rpc SendLog (SendLogRequest) returns (SendLogResponse);
}

message SendLogRequest {
  string service_name = 1;
  string level = 2;
  string message = 3;
  string timestamp = 4;
  map<string, string> metadata = 5;
}

message SendLogResponse {
  bool ok = 1;
}
